@@ -5,3 +5,7 @@ INSERT INTO `spell_script_names` (`spell_id`, `ScriptName`) VALUES (56684, 'spel
 -- Plant Kil'sorrow Banner (Quest: Returning the Favor (Id: 9931))
 DELETE FROM `spell_script_names` WHERE `spell_id`=32314;
 INSERT INTO `spell_script_names` (`spell_id`, `ScriptName`) VALUES (32314, 'spell_item_kilsorrow_banner');
+
+-- Imbue Crystal (Quest: The Stones of Vekh'nir (Id: 10565))
+DELETE FROM `spell_script_names` WHERE `spell_id`=37172;
+INSERT INTO `spell_script_names` (`spell_id`, `ScriptName`) VALUES (37172, 'spell_item_vekhnir_crystal');
